Updates from ShareLaTeX

--- a/CV.tex
+++ b/CV.tex
@@ -55,7 +55,7 @@ breaklinks}
 % TITLE BLOCK %
 %%%%%%%%%%%%%%%
 
-\Title{\CVAuthor}
+\Title{Georg J.P. Link}
 
 \begin{SubTitle}
 \href{https://www.google.com/maps/place/University+of+Nebraska+at+Omaha}
