--- a/CV.tex
+++ b/CV.tex
@@ -21,7 +21,7 @@
 %for Acme Corporation}
 \newcommand{\CVNote}{CV last updated on {\today}} 
 % for Acme Corporation}
-\newcommand{\CVWebpage}{http://georg.link/}
+\newcommand{\CVWebpage}{https://georg.link/}
 % \newcommand{\CVWebpage}{http://georglink.de/}
 
 % PDF settings and properties.
